<resources>
    <string name="app_name">Know Movies</string>
    <string name="sort_popular">Popular Movies</string>
    <string name="sort_top">Top Rated Movies</string>
    <string name="sort_upcoming">Upcoming Movies</string>
    <string name="sort_now_playing">Now Playing Movies</string>
    <string name="sort_favorites">Favorite Movies</string>

    <string name="title">Title</string>
    <string name="overview">Plot</string>
    <string name="Rating">User Rating</string>
    <string name="release_date">Release Date</string>
    <string name="Movie_remove">Movie Removed</string>
    <string name="Movie_Saved">Movie Saved</string>
</resources>

