<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:title="@string/sort_popular"
    android:orderInCategory="1"
    android:id="@+id/menu_popular"
    app:showAsAction="collapseActionView"
   />
    <item
        android:title="@string/sort_top"
        android:orderInCategory="2"
        android:id="@+id/menu_top"

        app:showAsAction="collapseActionView"
        />
    <item
        android:title="@string/sort_upcoming"
        android:orderInCategory="3"
        android:id="@+id/menu_upcoming"

        app:showAsAction="collapseActionView"
        />
    <item
        android:title="@string/sort_now_playing"
        android:orderInCategory="4"
        android:id="@+id/menu_now_playing"

        app:showAsAction="collapseActionView"
        />
    <item
        android:title="@string/sort_favorites"
        android:orderInCategory="5"
        android:id="@+id/menu_favorite"

        app:showAsAction="collapseActionView"
        />
</menu>